--- a/e-commerce-workspace/nx.json
+++ b/e-commerce-workspace/nx.json
@@ -41,7 +41,16 @@
   "generators": {
     "@nrwl/react": {
       "application": {
+        "style": "styled-components",
+        "linter": "eslint",
         "babel": true
+      },
+      "component": {
+        "style": "styled-components"
+      },
+      "library": {
+        "style": "styled-components",
+        "linter": "eslint"
       }
     },
     "@nrwl/next": {
