--- a/e-commerce-workspace/package.json
+++ b/e-commerce-workspace/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
+    "start-admin": "nx serve e-commerce-admin-web",
     "build": "nx build",
     "test": "nx test"
   },
@@ -14,26 +15,33 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "18.2.0",
+    "react-router-dom": "6.4.1",
     "regenerator-runtime": "0.13.7",
+    "styled-components": "5.3.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nrwl/cli": "14.7.8",
-    "@nrwl/cypress": "14.7.8",
+    "@nrwl/cypress": "15.0.1",
     "@nrwl/eslint-plugin-nx": "14.7.8",
-    "@nrwl/jest": "14.7.8",
+    "@nrwl/jest": "15.0.1",
     "@nrwl/linter": "14.7.8",
-    "@nrwl/react": "14.7.8",
-    "@nrwl/web": "14.7.8",
+    "@nrwl/react": "15.0.1",
+    "@nrwl/web": "15.0.1",
     "@nrwl/workspace": "14.7.8",
-    "@testing-library/react": "13.3.0",
+    "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.18",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-is": "17.0.3",
+    "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-plugin-styled-components": "1.10.7",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "12.2.5",
@@ -41,7 +49,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.1",
+    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
